@@ -1,4 +1,5 @@
 Modified files by OpenBSD:
+- auto/cc/gcc
 - auto/install
 - auto/lib/pcre/conf
 - auto/make
@@ -8,6 +9,9 @@ Modified files by OpenBSD:
 - src/core/nginx.c
 - src/core/ngx_cycle.c
 - src/core/ngx_file.c
+- src/core/ngx_string.c
+- src/core/ngx_string.h
+- src/http/ngx_http_core_module.c
 - src/os/unix/ngx_process_cycle.c
 - src/os/unix/ngx_process_cycle.h
 - src/pcre/pcre_compile.c
